fixing spacing

--- a/snap/snap-wp/scss/styles.scss
+++ b/snap/snap-wp/scss/styles.scss
@@ -53,6 +53,7 @@ h2 {
       text-transform: uppercase;
       font-size: 1.2rem;
       letter-spacing: 0.0625rem;
+      border-top: 2px solid transparent;
       border-bottom: 2px solid transparent;
 
       &:hover,
